Fix stretching of profile images

--- a/frontend/src/app/components/edit-employer/edit-employer.component.scss
+++ b/frontend/src/app/components/edit-employer/edit-employer.component.scss
@@ -31,7 +31,9 @@ img {
   width: 250px;
 }
 
-.image {
+.custom-image {
+  height: 250px;
+  object-fit: cover;
   border-radius: 50%;
   border: 4px solid #465c69;
 }
