--- a/frontend/src/app/components/employee-details/employee-details.component.scss
+++ b/frontend/src/app/components/employee-details/employee-details.component.scss
@@ -4,6 +4,7 @@ img {
 }
 
 .image {
+  object-fit: cover;
   border-radius: 50%;
   border: 4px solid #465c69;
 }
