--- a/frontend/src/app/components/employer-details/employer-details.component.scss
+++ b/frontend/src/app/components/employer-details/employer-details.component.scss
@@ -3,6 +3,8 @@ img {
 }
 
 .image {
+  object-fit: cover;
+  height: 250px;
   border-radius: 50%;
   border: 4px solid #465c69;
 }
